fix(css): inline-flex vertical align + group border

--- a/src/core/button/_button.less
+++ b/src/core/button/_button.less
@@ -5,6 +5,7 @@
 .btn {
   cursor: pointer;
   display: inline-flex;
+  vertical-align: middle;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
