--- a/src/core/drop/_drop.less
+++ b/src/core/drop/_drop.less
@@ -4,6 +4,7 @@
 
 .drop-container {
   display: inline-flex;
+  vertical-align: middle;
   position: relative;
   // z-index
   &.active {
