--- a/src/core/group/_group.less
+++ b/src/core/group/_group.less
@@ -14,6 +14,7 @@
 
 .group-inner {
   display: inline-flex;
+  vertical-align: middle;
   flex-wrap: nowrap;
   flex-direction: column;
   // .btn
