--- a/src/core/group/group.less
+++ b/src/core/group/group.less
@@ -16,6 +16,7 @@
   // content
   .group-inner {
     > .btn {
+      border-radius: @group-border-radius;
       border-width: @group-border-width;
       border-color: @shade-300 !important;
       &:hover, &.hover, &:active, &.active {
@@ -23,6 +24,7 @@
       }
     }
     > .form-item {
+      border-radius: @group-border-radius;
       border-width: @group-border-width;
       border-color: @shade-300 !important;
       &:focus, &.active {
